add images to child menu for all menus page

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1242,6 +1242,7 @@ label {
     .menus__child {
       font-size: 1.2em;
       text-align: center;
+      margin-bottom: 2rem;
     }
       .menus__child-link {
         color: $menu-link-color;
@@ -1354,6 +1355,10 @@ label {
 
 
 // http://www.stubbornella.org/content/2010/06/25/the-media-object-saves-hundreds-of-lines-of-code/
+// all menus
+.section_title--allMenus {
+  text-align: center;
+}
 .food {
   overflow: hidden;
   _overflow: visible;
