add anchor for child menus in header

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1359,6 +1359,27 @@ label {
 .section_title--allMenus {
   text-align: center;
 }
+// menu page
+.section__title--menu {
+  display: inline-block;
+  margin-right: 2rem;
+}
+.anchor-items {
+  display: inline-block;
+}
+.anchor-item {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0.25em 0.5em;
+}
+.anchor-scroll {
+  font-size: 0.7rem;
+  text-decoration: none;
+  color: $body-color;
+}
+.anchor-image {
+  border-radius: 50%;
+}
 .food {
   overflow: hidden;
   _overflow: visible;
