--- a/templates/menu.liquid
+++ b/templates/menu.liquid
@@ -1,7 +1,20 @@
 <section class="page-header page-header--menu">
   <div class="wrapper">
     <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ menu.name }}</h1>
+      <h1 class="section__title section__title--menu page-header__title">{{ menu.name }}</h1>
+      {% if menu.children? %}
+        <ul class="anchor-items">
+          {% for child in menu.children %}
+            <li class="anchor-item">
+              <a href="#menu-{{child.id}}" class="anchor-scroll">
+                {{ child.main_image | custom_image_url: "100x100#" | image_tag: "class:anchor-image" }}
+                <br>
+                <p class="anchor-name">{{ child.name}}</p>
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+      {% endif %}
     </header>
     {% if menu.summary? %}
       <main class="section__main page-header__description">
