change image thumbnails form in round

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1359,6 +1359,9 @@ label {
 .section_title--allMenus {
   text-align: center;
 }
+.menus-thumbnail--all img {
+  border-radius: 50%;
+}
 // menu page
 .section__title--menu {
   display: inline-block;
