reset link (a) style

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -955,6 +955,10 @@ body {
   color: $body-color;
   background-color: $body-background;
 }
+a {
+  text-decoration: none;
+  color: $body-color;
+}
 .page {
   @extend .clearfix;
 }
