summary home page center

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1223,6 +1223,7 @@ label {
   color: $restaurant-summary-color;
   padding-top: 4em;
   padding-bottom: 3em;
+  text-align: center;
   p {
     font-size: 1.2em;
   }
