--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -57,6 +57,13 @@
               </a>
             </li>
           {% endif %}
+          {% if restaurant.tripadvisor_url? %}
+            <li class="social__item">
+              <a class="social__link icon-tripadvisor" href="{{restaurant.tripadvisor_url}}">
+                <span class="social__label">{{ "Notre page TripAdvisor" | t }}</span>
+              </a>
+            </li>
+          {% endif %}
         </ul>
       </div>
 
