--- a/snippets/nav.liquid
+++ b/snippets/nav.liquid
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="main-nav-wrapper">
   <div class="grid">
     <div class="grid-item large--three-quarters">
       <ul class="main-nav__items">
