adjust size main-nav item for desktop

--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -1753,7 +1753,9 @@ x:-o-prefocus, .lb-overlay img {
       display: inline-block;
       font-size: 1rem;
     }
-
+      .main-nav__link {
+        font-size: 1rem;
+      }
   .main-nav__languages {
     text-align: center;
   }
