--- a/snippets/nav.liquid
+++ b/snippets/nav.liquid
@@ -2,31 +2,32 @@
   <div class="grid">
     <div class="grid-item large--three-quarters">
       <ul class="main-nav__items">
-        <li class="main-nav__item">
-          <a class="main-nav__link" href="{{ localized_root_path }}">{{ "Accueil" | t }}</a>
-        </li>
+        {% for link in linklists.navigation-primaire.links %}
+          {% if link.linklist_handle == null %}
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="{{ link.url }}">{{ link.title }}</a>
+            </li>
+          {% else %}
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="{{ link.url }}">{{ link.title }} </a>
+              <ul class="main-sub-nav__items">
+                {% for l in linklists[link.linklist_handle].links %}
+                <li class="main-sub-nav__item">
+                  <a class="main-sub-nav__link" href="{{ l.url }}">{{ l.title }}</a>
+                </li>
+                {% endfor %}
+              </ul>
+            </li>
+          {% endif %}
+        {% endfor %}
         {% for menu in menus %}
           <li class="main-nav__item">
             <a class="main-nav__link" href="{{ menu.url }}">{{ menu.name }}</a>
           </li>
         {% endfor %}
         <li class="main-nav__item">
-          <a class="main-nav__link" href="{{ restaurant.url }}">{{ "Le restaurant" | t }}</a>
-        </li>
-        <li class="main-nav__item">
           {{ "Newsletter" | newsletter_subscribe_url:'class:main-nav__link' }}
         </li>
-        {% if theme_settings.display_contact_form %}
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="{{ restaurant.contact_path }}">
-              {% if contact_settings.navigation_label? %}
-                {{ contact_settings.navigation_label }}
-              {% else %}
-                {{ contact_settings.contact_title }}
-              {% endif %}
-            </a>
-          </li>
-        {% endif %}
       </ul>
     </div>
 
