--- a/assets/application.scss.liquid
+++ b/assets/application.scss.liquid
@@ -936,7 +936,6 @@ a {
 .main-nav {
   @include clearfix();
   background-color: #fff;
-  margin-bottom: 0.5rem;
 }
   .main-nav__items {
     margin: 0;
@@ -953,7 +952,7 @@ a {
         display: block;
         font-size: 0.85em;
         text-decoration: none;
-        padding: .25em;
+        padding: .7em;
         width: 100%;
         &:hover,
         &:focus {
@@ -976,6 +975,7 @@ a {
   opacity: 0;
   visibility: hidden;
   margin: 0;
+  background-color: #fff;
 }
 .main-sub-nav__item {
   display: block;
