--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -45,14 +45,14 @@
           {% endif %}
           {% if restaurant.facebook_url? %}
             <li class="social__item">
-              <a class="social__link icon-facebook" href="{{restaurant.facebook_url}}">
+              <a class="social__link icon-social-facebook" href="{{restaurant.facebook_url}}">
                 <span class="social__label">{{ "Notre page Facebook" | t }}</span>
               </a>
             </li>
           {% endif %}
           {% if restaurant.twitter_url? %}
             <li class="social__item">
-              <a class="social__link icon-twitter" href="{{restaurant.twitter_url}}">
+              <a class="social__link icon-social-twitter" href="{{restaurant.twitter_url}}">
                 <span class="social__label">{{ "Notre compte Twitter" | t }}</span>
               </a>
             </li>
